resize the video and added mute icon, Added linkedin link in footer

--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -2,13 +2,17 @@
     ViewData["Title"] = "Rural-Reformers";
 }
 <script src="~/lib/jquery/dist/jquery.js"></script>
+<link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+<script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 <div>
-    <div>
-        <video autoplay muted playsinline style="width:100%;" loop="loop" id="vid">
+    <div class="container">
+        <video autoplay muted playsinline style="width:97%;max-height:400px;" loop="loop" id="vid">
             <source src="~/Images/ruralInfraInfo.mp4" type="video/mp4" />
         </video>
         <br />
-        <button type ="button" class="btn btn-info" id="unmuteToggle">Un-mute</button>
+        <svg style="margin-left:15%;" id="unmuteToggle" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-volume-mute-fill" viewBox="0 0 16 16">
+            <path d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06zm7.137 2.096a.5.5 0 0 1 0 .708L12.207 8l1.647 1.646a.5.5 0 0 1-.708.708L11.5 8.707l-1.646 1.647a.5.5 0 0 1-.708-.708L10.793 8 9.146 6.354a.5.5 0 1 1 .708-.708L11.5 7.293l1.646-1.647a.5.5 0 0 1 .708 0z" />
+        </svg>
     </div>
 
     <div class="container">
@@ -71,7 +75,7 @@
                 <img class="d-block w-100" src="~/Images/image3.jpeg" alt="Third slide">
             </div>
         </div>
-    </div>    
+    </div>
 </div>
 
 <script>
@@ -82,5 +86,4 @@
         });
     })
 </script>
-
 
