--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
                 <a href="https://facebook.com/RuralReformers" target="_blank"><i class="fa fa-facebook-f" style="font-size:24px"></i></a>
                 <a href="https://instagram.com/ruralreformers" target="_blank"><i class="fa fa-instagram" style="font-size:24px"></i></a>
                 <a href="https://twitter.com/RuralReformers" target="_blank"><i class="fa fa-twitter" style="font-size:24px"></i></a>
+                <a href="https://linkedin.com/company/RuralReformers" target="_blank"><i class="fa fa-linkedin" style="font-size:24px"></i></a>
             </div>
         </footer>
     </div>
