--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="faq">FAQ</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-team">About Us</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
