--- a/Ruralreformers/Views/Home/ContactUs.cshtml
+++ b/Ruralreformers/Views/Home/ContactUs.cshtml
@@ -10,13 +10,13 @@
     <div class="col-md-4">
         <form asp-action="ContactUs">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="ToEmail" class="control-label">Email</label>
                 <input asp-for="ToEmail" readonly class="form-control" value="Ruralreformers@gmail.com"/>
                 <span asp-validation-for="ToEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FromEmail" class="control-label">From Email</label>
+                <label asp-for="FromEmail" class="control-label">Email</label>
                 <input asp-for="FromEmail" class="form-control" />
                 <span asp-validation-for="FromEmail" class="text-danger"></span>
             </div>
