--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -63,21 +63,40 @@
         <p>Hence, Mini-SRPs are planned to address the 3 key challenges of our Rural India. Let’s make the difference we want to see. </p>
     </div>
 
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="~/Images/image1.jpeg" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Images/image2.jpeg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="~/Images/image3.jpeg" alt="Third slide">
+    <div class="container">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="~/Images/image1.jpeg" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/Images/image2.jpeg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="~/Images/image3.jpeg" alt="Third slide">
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+<div class="container">
+    <h3>Our Team</h3>
+    <div class="row">
+        <div class="col-sm-3">
+            <a href="https://www.linkedin.com/in/chetaan-narayan-tendulkaar-9471a938" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/chetaan.jpeg" />
+                <p>Chetaan Narayan Tendulkaar</p>
+            </a>
+        </div>
+        <div class="col-sm-3 offset-0">
+            <a href="http://www.linkedin.com/in/priyanka-singh-21444656" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/priyankasingh.jpeg" />
+                <p>Priyanka Singh</p>
+            </a>
+        </div>
+    </div>
+</div>
 <script>
     $(document).ready(function () {
         var video = document.getElementById('vid');
