--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Ruralreformers</title>
+    <link rel="shortcut icon" type="image/x-icon" href="~/Images/ruruallogo.jpg" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
@@ -11,7 +12,7 @@
 <body>
     <div class="app">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: #ffc107 !important; margin-bottom: 0px !important; ">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: #c8a2c8 !important; margin-bottom: 0px !important; ">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ruralreformers</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -33,7 +34,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="faq">FAQ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-team">About Us</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="our-team">Our Team</a>
                             </li>
                         </ul>
                     </div>
