--- a/Ruralreformers/Views/Home/OurTeam.cshtml
+++ b/Ruralreformers/Views/Home/OurTeam.cshtml
@@ -2,14 +2,40 @@
     <h3>Our Team</h3>
     <div class="row">
         <div class="col-sm-3">
+            <a href="http://www.linkedin.com/in/Parthadasin" target="_blank">
+                <img src="~/Images/parth.jpeg" style="width:200px;height:200px;" />
+                <p>Partha Das</p>
+            </a>
+        </div>
+        <div class="col-sm-3">
             <a href="https://www.linkedin.com/in/chetaan-narayan-tendulkaar-9471a938" target="_blank">
-            <img style="width:200px;height: 200px;" src="~/Images/chetaan.jpeg"/>
-            <p>Chetaan Narayan Tendulkaar</p></a>
+                <img style="width:200px;height: 200px;" src="~/Images/chetaan.jpeg" />
+                <p>Chetaan Narayan Tendulkaar</p>
+            </a>
         </div>
         <div class="col-sm-3 offset-0">
-            <a href="http://linkedin.com/in/priyanka-singh-21444656">
-                <img style="width:200px;height: 200px;" src="~/Images/priyankasingh.jpeg"/>
+            <a href="http://www.linkedin.com/in/priyanka-singh-21444656" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/priyankasingh.jpeg" />
                 <p>Priyanka Singh</p>
+            </a>
+        </div>
+
+        <div class="col-sm-3">
+            <a href="https://www.linkedin.com/in/amritha-shenoy-19801513" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/Amritha.jpeg" />
+                <p>Amritha Shenoy</p>
+            </a>
+        </div>
+        <div class="col-sm-3 offset-0">
+            <a href="https://www.linkedin.com/in/priyanka-kumari-438561a6" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/priyankaKumari.jpeg" />
+                <p>Priyanka Kumari</p>
+            </a>
+        </div>
+        <div class="col-sm-3 offset-0">
+            <a href="https://www.linkedin.com/in/karthick-kumar-16060116/" target="_blank">
+                <img style="width:200px;height: 200px;" src="~/Images/kharthik.jpeg" />
+                <p>Karthick Kumar</p>
             </a>
         </div>
     </div>
