--- a/Ruralreformers/Views/Home/Donate.cshtml
+++ b/Ruralreformers/Views/Home/Donate.cshtml
@@ -1,3 +1,12 @@
 ﻿<div class="container">
-    <p>You can donate monthly here: <a href="https://pages.razorpay.com/De4THl" />https://pages.razorpay.com/De4THl </p>
+    <ol>
+        <li>For corporates</li>
+        <li>
+        For individual donors
+        <ol>
+            <li>For Indian Donors – <a target="_blank" href="https://pages.razorpay.com/De4THl">https://pages.razorpay.com/De4THl</a></li>
+            <li>For International Donors –</li>
+        </ol>
+        </li>
+    </ol>
 </div>
