--- a/Ruralreformers/Views/Home/Faq.cshtml
+++ b/Ruralreformers/Views/Home/Faq.cshtml
@@ -1,13 +1,9 @@
 ﻿<div class="container">
     <div class="col-sm-12">
-        <p><strong>Education for every Child in India</strong></p>
-    </div>
-    <p>Program for Inclusive education</p>
-    <div class="col-sm-12">
-            <ol>
-                <li>
+        <ol>
+            <li>
                 <p><strong>What is the problem we want to address?</strong></p>
-                
+                <img src="~/Images/realInclusion.png" style="float:right" />
                 <p>
                     We want to help people with disabilities to reach main
                     stream education and have employment opportunities.
@@ -22,206 +18,213 @@
                     99% children also get the basic training and become
                     ready to go to a mainstream school.
                 </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Do we have existing government schemes
-                            to support such causes? How is SRP different?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        Yes, there are a number of government schemes
-                        supporting such causes. However, the schemes are not
-                        addressing the problem in a holistic manner and most of
-                        the schemes work in silos. Hence to solve it in a holistic
-                        manner, we have designed the 
-                        <strong>
-                            “School Readiness
-                            Program- SRP”
-                        </strong> where our volunteers work with the
-                        government to address the issue of basic education for
-                        children with special needs.
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                           How will our solution make a difference?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        To address this problem, Fourth Wave Foundation has been working with the Karnataka government on a program
-                        named as “School Readiness Program - SRP”. This program runs from centers located in government selected locations
-                        providing –
-                        <ol>
-                            <li>Physiotherapy and medical assistance to children with disabilities.</li>
-                            <li>Coaching on skills needed to be self-sufficient and self-reliant for their day-to-day activities.</li>
-                            <li>Training to be ready to join the regular school stream.</li>
-                        </ol>
-                    </p>
-                    
-                    <p>
-                        <u>
-                            This program has been successful in increasing the enrolment of children with special needs in schools from 1% to 21%
-                            (In approximately 3 years*).
-                        </u>
-                    </p>
-                    
-                    <p>
-                        To further enable the vision of educating every child in India, we have come together to raise funds to fulfil below 2
-                        objectives.
-                        <ol>
-                            <li>
-                                Support existing SRP in Dharward, Karnataka
-                            </li>
-                            <li>
-                                Start a pilot of two Mini-School Readiness Program Centers (Mini SRP)- We intend to set up 2 Mini SRP centers
-                                in rural Karnataka which will cater to the Children with special needs.
-                            </li>
-                        </ol>
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Tell me more about Mini SRP?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        The Mini SRP centers are leaner versions of main SRP Centers. Each Mini SRP will have one skilled teacher and
-                        physiotherapist to train children with special needs, along with a helper to assist these two main staff. Along with that,
-                        the center will also have basic health infrastructure needed for providing mobility and self-sustenance skills to children
-                        with special needs.
-                    </p>
-                    
-                    <p>
-                        <strong>
-                            The same center will also double up as -
-                        </strong>
-                    </p>
-                    
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        Do we have existing government schemes
+                        to support such causes? How is SRP different?
+                    </strong>
+                </p>
+
+                <p>
+                    Yes, there are a number of government schemes
+                    supporting such causes. However, the schemes are not
+                    addressing the problem in a holistic manner and most of
+                    the schemes work in silos. Hence to solve it in a holistic
+                    manner, we have designed the
+                    <strong>
+                        “School Readiness
+                        Program- SRP”
+                    </strong> where our volunteers work with the
+                    government to address the issue of basic education for
+                    children with special needs.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        How will our solution make a difference?
+                    </strong>
+                </p>
+
+                <p>
+                    To address this problem, Fourth Wave Foundation has been working with the Karnataka government on a program
+                    named as “School Readiness Program - SRP”. This program runs from centers located in government selected locations
+                    providing –
+                    <ol>
+                        <li>Physiotherapy and medical assistance to children with disabilities.</li>
+                        <li>Coaching on skills needed to be self-sufficient and self-reliant for their day-to-day activities.</li>
+                        <li>Training to be ready to join the regular school stream.</li>
+                    </ol>
+                </p>
+
+                <p>
+                    <u>
+                        This program has been successful in increasing the enrolment of children with special needs in schools from 1% to 21%
+                        (In approximately 3 years*).
+                    </u>
+                </p>
+
+                <p>
+                    To further enable the vision of educating every child in India, we have come together to raise funds to fulfil below 2
+                    objectives.
                     <ol>
                         <li>
-                            <p>
-                                Adult Literacy Program (ALP) center during the evenings post school hours
-                            </p>
+                            Support existing SRP in Dharward, Karnataka
                         </li>
                         <li>
-                            <p>
-                                Telemedicine center during weekends to provide specialised healthcare support
-                            </p>
+                            Start a pilot of two Mini-School Readiness Program Centers (Mini SRP)- We intend to set up 2 Mini SRP centers
+                            in rural Karnataka which will cater to the Children with special needs.
                         </li>
                     </ol>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            Is there any impact of covid on SRPs and how are you managing it?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        Currently, the SRP centers are closed. The teachers and physiotherapist are visiting the children's home for providing
-                        the training and physiotherapy sessions. We are planning to utilize this time for creating Mini -SRP centers; so that the
-                        centre is operational for children as soon as pandemic comes under control.
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            How do I see the results of the changes we are making?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        You can visit any SRP / Mini SRP center (once set up) by seeking prior appointments. We recommended visiting any
-                        center that has been functional for at least six months for seeing the clearly identifiable results.
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        <strong>
-                            How do I be part of this change making initiative?
-                        </strong>
-                    </p>
-                    
-                    <p>
-                        As we start the mini SRPs, you can support the initiative in following ways:
-                    </p>
-                    <ol>
-                        <li>
-                            <strong>Volunteering </strong>– Volunteer to teach, coach or to coordinate our activities. You can also volunteer to raise funds
-                            for the program.
-                        </li>
-                        <li>
-                            <p><strong>Donating</strong> – You can visit the link to donate any amount for this initiative. The funds donated are exempt under
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        Tell me more about Mini SRP?
+                    </strong>
+                </p>
+
+                <p>
+                    The Mini SRP centers are leaner versions of main SRP Centers. Each Mini SRP will have one skilled teacher and
+                    physiotherapist to train children with special needs, along with a helper to assist these two main staff. Along with that,
+                    the center will also have basic health infrastructure needed for providing mobility and self-sustenance skills to children
+                    with special needs.
+                </p>
+
+                <p>
+                    <strong>
+                        The same center will also double up as -
+                    </strong>
+                </p>
+
+                <ol>
+                    <li>
+                        <p>
+                            Adult Literacy Program (ALP) center during the evenings post school hours
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            Telemedicine center during weekends to provide specialised healthcare support
+                        </p>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        Is there any impact of covid on SRPs and how are you managing it?
+                    </strong>
+                </p>
+
+                <p>
+                    Currently, the SRP centers are closed. The teachers and physiotherapist are visiting the children's home for providing
+                    the training and physiotherapy sessions. We are planning to utilize this time for creating Mini -SRP centers; so that the
+                    centre is operational for children as soon as pandemic comes under control.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        How do I see the results of the changes we are making?
+                    </strong>
+                </p>
+
+                <p>
+                    You can visit any SRP / Mini SRP center (once set up) by seeking prior appointments. We recommended visiting any
+                    center that has been functional for at least six months for seeing the clearly identifiable results.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        How do I be part of this change making initiative?
+                    </strong>
+                </p>
+
+                <p>
+                    As we start the mini SRPs, you can support the initiative in following ways:
+                </p>
+                <ol>
+                    <li>
+                        <strong>Volunteering </strong>– Volunteer to teach, coach or to coordinate our activities. You can also volunteer to raise funds
+                        for the program.
+                    </li>
+                    <li>
+                        <p>
+                            <strong>Donating</strong> – You can visit the link to donate any amount for this initiative. The funds donated are exempt under
                             Section 80G (for Indian Donors).
-                            </p>
-                            
-                            <p>
-                                Click here- https://pages.razorpay.com/De4THl
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>
-                                    How can a non-resident Indian contribute for this project?
-                                </strong>
-                            </p>
-                            
-                            <p>
-                                For Non - Indian Passport Holders to share contributions, do reach out to us at ruralreformers@gmail.com. We will guide
-                                you on further steps.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>
-                                    Can I get my family and friends involved?
-                                </strong>
-                            </p>
-                            
-                            <p>
-                                Yes, we are always in need of more volunteers, sponsors and donors for our programs. Anyone who connects with the
-                                cause and is ready to contribute in any form is always welcome.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                <strong>
-                                    Sounds interesting! I would like to be part of the project; how should I connect with the
-                                    team?
-                                </strong>
-                            </p>
-                            
-                            <p>
-                                It is amazing to know that you would love to join your hands with us. Please do reach us at
-                            </p>
-                            <ol>
-                                <li>
-                                    <a href="www.facebook.com/RuralReformers" target="_blank">Facebook: www.facebook.com/RuralReformers</a>
-                                </li>
-                                <li>
-                                    <a href="www.twitter.com/RuralReformers" target="_blank">Twitter: www.twitter.com/RuralReformers</a>
-                                    
-                                </li>
-                                <li>
-                                    <a href="https://instagram.com/ruralreformers" target="_blank">
-                                        Instagram: https://instagram.com/ruralreformers
-                                    </a>                               
-                                </li>
-                                <li>
-                                    Email: ruralreformers@gmail.com
-                                </li>
-                            </ol>
-                        </li>
-                    </ol>
-                </li>
-            </ol>
+                        </p>
+
+                        <p>
+                            Click here- <a target="_blank" href="https://pages.razorpay.com/De4THl">https://pages.razorpay.com/De4THl</a>
+                        </p>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        How can a non-resident Indian contribute for this project?
+                    </strong>
+                </p>
+
+                <p>
+                    For Non - Indian Passport Holders to share contributions, do reach out to us at <a target="#" href="ruralreformers@gmail.com">ruralreformers@gmail.com</a>. We will guide
+                    you on further steps.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        Can I get my family and friends involved?
+                    </strong>
+                </p>
+
+                <p>
+                    Yes, we are always in need of more volunteers, sponsors and donors for our programs. Anyone who connects with the
+                    cause and is ready to contribute in any form is always welcome.
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>
+                        Sounds interesting! I would like to be part of the project; how should I connect with the
+                        team?
+                    </strong>
+                </p>
+
+                <p>
+                    Please write to us at <a href="#">ruralreformers@gmail.com</a>
+                </p>
+            </li>
+            <li>
+                <p>
+                    <strong>Follow us at</strong>
+                </p>
+                <ol>
+                    <li>
+                        <a href="www.facebook.com/RuralReformers" target="_blank">Facebook: www.facebook.com/RuralReformers</a>
+                    </li>
+                    <li>
+                        <a href="www.twitter.com/RuralReformers" target="_blank">Twitter: www.twitter.com/RuralReformers</a>
+
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/ruralreformers" target="_blank">
+                            Instagram: https://instagram.com/ruralreformers
+                        </a>
+                    </li>
+                    <li>
+                        Email: ruralreformers@gmail.com
+                    </li>
+                </ol>
+
+            </li>
+        </ol>
         </div>
 </div>
 
