--- a/Ruralreformers/Views/Home/Index.cshtml
+++ b/Ruralreformers/Views/Home/Index.cshtml
@@ -10,14 +10,17 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <div>
     <div class="container">
-        <iframe width="1100" height="400" src="https://www.youtube.com/embed/J2bn0uBTVbA" title="YouTube video player"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <br />
-    </div>
+        <p><strong>Rural Reformers</strong></p>
+        <p>
+            Rural Reformers are a group of like-minded volunteers who envision inclusive education for every child in India. We want to change Rural India for the better. We are taking small steps for making that big change.
+            To drive this cause, Rural Reformers are working with verified NGOs. We assist them with volunteering, fundraising, guidance on project implementation & progress monitoring for these associated projects.
+            As a start, we are focusing on Rural Karnataka to help children with disabilities to be a part of the main stream education and have equal employment opportunities.
+        </p>
+        <p><strong>Our Vision</strong></p>
+        <p>Education for every Child in India</p>
+        <p><strong>Our Mision</strong></p>
+        <p>Enabling basic education for every child in Rural Karnataka by 2027</p>
 
-    <div class="container">
-        <p>Our Vision</p>
-        <strong>Education for every Child in India</strong>
         <p>Current Challenges in our Villages.</p>
         <ul>
             <li><strong>Accessibility to quality education:</strong> It is difficult for children with special needs to cope with regular education and tend to drop out from the mainstream education system</li>
@@ -61,6 +64,12 @@
             <li>Specialised Telemedicine Centers (STC) - Telemedicine centers during weekends to provide specialised healthcare support for people in villages</li>
         </ul>
         <p>Hence, Mini-SRPs are planned to address the 3 key challenges of our Rural India. Let’s make the difference we want to see. </p>
+    </div>
+
+    <div class="container">
+        <iframe width="1100" height="400" src="https://www.youtube.com/embed/J2bn0uBTVbA" title="YouTube video player"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br />
     </div>
 </div>
 
