--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" target="_blank" href="https://pages.razorpay.com/De4THl">Donate</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="donate">Donate</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="join-as-volunteer">Join us to volunteer</a>
