--- a/Ruralreformers/Views/Shared/_Layout.cshtml
+++ b/Ruralreformers/Views/Shared/_Layout.cshtml
@@ -11,16 +11,18 @@
 </head>
 <body>
     <div class="app">
-        <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: #c8a2c8 !important; margin-bottom: 0px !important; ">
+        <header style="position: inherit">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style=" background-color: #1e90ff !important; margin-bottom: 0px !important; ">
                 <div class="container">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ruralreformers</a>
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                        <img style="width:90px;height:90px; border-radius:45px;" src="~/Images/ruruallogo.jpg" />
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <ul class="navbar-nav flex-grow-1">
+                        <ul class="navbar-nav flex-grow-1 header-text-color">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="rural-reformers" asp-action="donate">Donate</a>
                             </li>
@@ -66,7 +68,11 @@
         margin: 0;
         padding: 0;
     }
-
+    .header-text-color a {
+        color: #f8f9fa !important;
+        font-size: larger;
+        font-weight: 500;
+    }
     .App {
         min-height: 100vh;
         display: flex;
